--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://rashidkisome.github.io/portfolio",
   "name": "gatsby-starter-fresh",
   "description": "GatsbyJS starter blog with the Fresh theme.",
   "version": "0.1.0",
